<resources>
    <string name="app_name">SellBuy</string>
    <string name="total_purchase">Total Purchase</string>
    <string name="total_sell">Total Sell</string>
    <string name="details">Details</string>
    <string name="purchase">Purchase</string>
    <string name="sell">Sell</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="price">Price</string>
    <string name="unit_of_price">Unit of Price</string>
    <string name="total_quantity">Total Quantity</string>
    <string name="total">Total</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zero_literal">0</string>
    <string name="settings">settings</string>
</resources>