<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/date_selection_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/time_selection_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="27/3/2021" />

        <Button
            android:id="@+id/time_selection_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/date_selection_button"
            tools:layout_editor_absoluteY="95dp"
            app:layout_constraintStart_toEndOf="@+id/date_selection_button"
            tools:text="27/3/2021" />

        <TextView
            android:id="@+id/enter_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_product_name"
            android:textColor="@color/black"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="@id/product_name_prompt_wrapper"
            app:layout_constraintTop_toBottomOf="@id/date_selection_button"
            tools:layout_editor_absoluteY="96dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/product_name_prompt_wrapper"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_product_name"
            android:layout_margin="16dp"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/product_name_prompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textAlignment="gravity"
                android:hint="Ex - Pizza" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/product_name_prompt_wrapper"
            app:layout_constraintStart_toStartOf="@id/price_prompt_wrapper" />

        <TextView
            android:id="@+id/unit_of_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_of_price"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/product_name_prompt_wrapper"
            app:layout_constraintStart_toStartOf="@id/unit_of_price_prompt_wrapper" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/price_prompt_wrapper"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/unit_of_price_prompt_wrapper"
            app:layout_constraintTop_toBottomOf="@+id/price_text"
            android:layout_margin="16dp"
            app:hintEnabled="false">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/price_prompt"
            android:layout_width="match_parent"
            android:hint="Ex - 200"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/unit_of_price_prompt_wrapper"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            app:prefixText="1 "
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/price_prompt_wrapper"
            app:layout_constraintTop_toBottomOf="@+id/price_text"
            app:hintEnabled="false">
        <com.google.android.material.textfield.TextInputEditText
            android:editable="false"
            android:focusable="false"
            android:hint="Add Unit"
            android:id="@+id/unit_of_price_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/total_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_quantity"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/price_prompt_wrapper"
            app:layout_constraintStart_toStartOf="@id/total_quantity_prompt_wrapper" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/total_quantity_prompt_wrapper"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/price_prompt_wrapper"
            app:layout_constraintStart_toStartOf="@id/price_prompt_wrapper"
            app:layout_constraintTop_toBottomOf="@+id/total_quantity">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/total_quantity_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/horizontal_divider"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/total_quantity_prompt_wrapper"
            android:layout_marginVertical="16dp" />

        <TextView
            android:id="@+id/total_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/horizontal_divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/total_money"
            android:textColor="@color/black"
            android:layout_marginHorizontal="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/total_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            app:layout_constraintTop_toTopOf="@+id/total_text"
            android:textColor="@color/design_default_color_primary"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/total_text"
            android:textStyle="bold" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>